# LFP_Proyecto1_202307764

./: .gitignore  CMakeLists.txt  ErrorManager.cpp  ErrorManager.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  MainWindow.cpp  MainWindow.h  README.md  ReportGenerator.cpp  ReportGenerator.h  Reporte_Citas.html  Reporte_Errores.html  Reporte_Estadistico.html  Reporte_Medicos.html  Reporte_Pacientes.html  Token.h  hospital.dot  main.cpp  prueba.med
examples/: ejemplo_completo_1.med  ejemplo_completo_2.med
tests/: test01_valido.med  test02_error_simbolo.med  test03_error_cadena.med  test04_error_palabra.med  test05_error_mezclado.med  test06_limite_numeros.med  test07_vacio.med.txt  test08_muchos_espacios.med  test09_especialidades_todas.med.txt  test10_error_lexema_largo.med
